--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "test":"echo \"Error: no test especified\" $$ exit 1",
+    "start": "node app.js"
+  },
   "dependencies": {
     "axios": "^1.13.2",
     "cookie-parser": "^1.4.7",
